--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,11 +18,13 @@ jobs:
     - uses: actions/checkout@v4
       with:
         repository: lnxiang/test-action
+        token: ${{ secrets.my-person-github-token }}
         path: test-action
         ref: main
     - uses: actions/checkout@v4   
       with:
         repository: lnxiang/add-function
+        token: ${{ secrets.my-person-github-token }}
         path: add-function
         ref: main
     - name: install cmake
