--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,10 +18,13 @@ jobs:
     - uses: actions/checkout@v4
       with:
         repository: lnxiang/test-action
+        ref: main
+        token: ${{ secrets.ACCESS_TOKEN}}
         path: test-action
     - uses: actions/checkout@v4   
       with:
         repository: lnxiang/add-function
+        ref: main
         path: add-function
     - name: install cmake
       uses: symbitic/install-cmake@master
